--- a/prompts/stage2.yaml
+++ b/prompts/stage2.yaml
@@ -1,11 +1,35 @@
-name: "Literal Extraction"
 prompt: |
-  Given the following natural language query, extract likely literal values that should appear in SQL predicates
-  e.g., WHERE col = \"VALUE\"
-  Return only the values and the likely columns they map to if possible.
-  
+  You are a predicate generator for an NL→SQL pipeline.
+
+  Your role is to propose WHERE-clause conditions (predicates) that connect
+  the natural language question to the database schema.
+
+  ⚠️ IMPORTANT RULES:
+  - Carefully analyze the natural-language entities in the question.
+  - Map them to the correct column values in the database schema.
+  - Normalize values if needed (e.g. case, abbreviations, spacing).
+  - If the value may not exist in the DB exactly as written,
+    suggest a semantically equivalent or normalized form.
+  - Prefer "=" for exact matches when confident.
+  - Use LIKE (with %wildcards%) when entity resolution is uncertain
+    or when abbreviations / substrings are likely.
+  - Never remove placeholders {question} or {stage1}.
+  - Always output a JSON object with a top-level key "predicates",
+    which contains a list of {column, operator, value} objects.
+
   Question:
-  {question}
+  $question
 
   Relevant tables/attributes:
-  {stage1output}
+  $stage1
+
+  Return STRICT JSON:
+  {{
+    "predicates": [
+      {{
+        "column": "...",
+        "operator": "...",
+        "value": "..."
+      }}
+    ]
+  }}
